[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameMode/Game.gd" type="Script" id=1]
[ext_resource path="res://Objects/World.tscn" type="PackedScene" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/gomarice_gogono_cocoa_mochi.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Audios/GameMusic.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audios/Died_sfx.wav" type="AudioStream" id=6]
[ext_resource path="res://UI/PausePanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/GameOverPanel.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[node name="Game" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="World" parent="." instance=ExtResource( 2 )]
pause_mode = 1

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 1
current = true
smoothing_enabled = true
smoothing_speed = 16.0
script = ExtResource( 3 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="HUD"]
margin_left = 40.0
margin_right = 77.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD"]
anchor_right = 1.0
margin_top = 30.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.12549, 1, 0, 1 )
text = "Score
0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetLabel" type="Label" parent="HUD"]
anchor_right = 1.0
margin_top = 70.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.921569, 1, 0, 1 )
text = "Target
500"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" parent="HUD" instance=ExtResource( 7 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -130.0
margin_right = 130.0
margin_bottom = 130.0

[node name="GameOverPanel" parent="HUD" instance=ExtResource( 8 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -6.10352e-05
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="HUD/CenterContainer"]
margin_left = 640.0
margin_top = 335.0
margin_right = 640.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.968627, 1, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 0.8
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="GameOverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"
[connection signal="continue_pressed" from="HUD/PausePanel" to="." method="pause" binds= [ false ]]
[connection signal="exit_pressed" from="HUD/PausePanel" to="." method="exit_to_menu"]
[connection signal="restart_pressed" from="HUD/PausePanel" to="." method="restart"]
[connection signal="exit_pressed" from="HUD/GameOverPanel" to="." method="exit_to_menu"]
[connection signal="restart_pressed" from="HUD/GameOverPanel" to="." method="restart"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
